hw2-franktseng0718/src/y.output
   0  $accept : program_name $end

   1  program_name : programname ';' programbody END programname

   2  programname : identifier

   3  identifier : ID

   4  programbody : varible_list function_list compound

   5  idList :
   6         | nonEmptyidList

   7  nonEmptyidList : nonEmptyidList ',' identifier
   8                 | identifier

   9  literal_constant : number
  10                   | STRING
  11                   | const_boolean

  12  const_boolean : TRUE
  13                | FALSE

  14  number : INT
  15         | OCTAL
  16         | SCI
  17         | FLOAT

  18  varible_list :
  19               | nonEmptyvaribles

  20  nonEmptyvaribles : nonEmptyvaribles varible
  21                   | varible

  22  function_list :
  23                | nonEmptyfunctions

  24  nonEmptyfunctions : function nonEmptyfunctions
  25                    | function

  26  function : functionName '(' arguments ')' body

  27  body : ':' TYPE ';' functionBody END ID
  28       | ';' functionBody END ID

  29  functionBody : compound

  30  functionName : identifier

  31  arguments :
  32            | nonEmptyDeclar

  33  nonEmptyDeclar : idList ':' TYPE EMP

  34  EMP : nonEmptyDeclar
  35      |

  36  varible : VAR idList ':' DE

  37  DE : TYPE ';'
  38     | ARRAY int_constant TO int_constant OF array_types ';'
  39     | literal_constant ';'

  40  array_types : ARRAY int_constant TO int_constant OF array_types
  41              | TYPE

  42  int_constant : INT

  43  statements : nonEmptystatements
  44             |

  45  nonEmptystatements : nonEmptystatements statement
  46                     | statement

  47  statement : compound
  48            | simple
  49            | conditional
  50            | while
  51            | for
  52            | return
  53            | function_invocation ';'

  54  compound : BG varible_list statements END

  55  simple : varible_reference ASSIGN expressions ';'
  56         | PRINT VE ';'
  57         | READ varible_reference ';'

  58  VE : varible_reference ';'
  59     | expressions ';'

  60  array_reference : identifier array_reference_list

  61  array_reference_list :
  62                       | '[' integer_expression ']' array_reference_list

  63  varible_reference : array_reference

  64  expressions : expression
  65              | integer_expression
  66              | boolean_expr

  67  expression : '-' expression
  68             | expression '+' expression
  69             | expression '-' expression
  70             | expression '*' expression
  71             | expression '/' expression
  72             | expression MOD expression
  73             | '(' expression ')'
  74             | number
  75             | identifier
  76             | function_invocation
  77             | array_reference

  78  integer_expression : int_constant
  79                     | identifier

  80  boolean_expr : expression '>' expression
  81               | expression '<' expression
  82               | expression LE expression
  83               | expression GE expression
  84               | expression '=' expression
  85               | expression NE expression
  86               | expression AND expression
  87               | expression OR expression
  88               | NOT expression
  89               | const_boolean
  90               | identifier
  91               | function_invocation

  92  function_invocation : identifier '(' expression_list ')'

  93  expression_list :
  94                  | expression
  95                  | expression_list ',' expression

  96  conditional : IF boolean_expr THEN conditional_body END IF

  97  conditional_body : statements
  98                   | statements ELSE statements

  99  while : WHILE boolean_expr DO statements END DO

 100  for : FOR identifier ASSIGN int_constant TO int_constant DO statements END DO

 101  return : RETURN expressions ';'

state 0
	$accept : . program_name $end  (0)

	ID  shift 1
	.  error

	program_name  goto 2
	programname  goto 3
	identifier  goto 4


state 1
	identifier : ID .  (3)

	.  reduce 3


state 2
	$accept : program_name . $end  (0)

	$end  accept


state 3
	program_name : programname . ';' programbody END programname  (1)

	';'  shift 5
	.  error


state 4
	programname : identifier .  (2)

	.  reduce 2


state 5
	program_name : programname ';' . programbody END programname  (1)
	varible_list : .  (18)

	VAR  shift 6
	BG  reduce 18
	ID  reduce 18

	programbody  goto 7
	varible_list  goto 8
	nonEmptyvaribles  goto 9
	varible  goto 10


state 6
	varible : VAR . idList ':' DE  (36)
	idList : .  (5)

	ID  shift 1
	':'  reduce 5

	identifier  goto 11
	idList  goto 12
	nonEmptyidList  goto 13


state 7
	program_name : programname ';' programbody . END programname  (1)

	END  shift 14
	.  error


state 8
	programbody : varible_list . function_list compound  (4)
	function_list : .  (22)

	ID  shift 1
	BG  reduce 22

	identifier  goto 15
	function_list  goto 16
	nonEmptyfunctions  goto 17
	function  goto 18
	functionName  goto 19


state 9
	varible_list : nonEmptyvaribles .  (19)
	nonEmptyvaribles : nonEmptyvaribles . varible  (20)

	VAR  shift 6
	END  reduce 19
	BG  reduce 19
	PRINT  reduce 19
	READ  reduce 19
	ID  reduce 19
	WHILE  reduce 19
	FOR  reduce 19
	RETURN  reduce 19
	IF  reduce 19

	varible  goto 20


state 10
	nonEmptyvaribles : varible .  (21)

	.  reduce 21


state 11
	nonEmptyidList : identifier .  (8)

	.  reduce 8


state 12
	varible : VAR idList . ':' DE  (36)

	':'  shift 21
	.  error


state 13
	idList : nonEmptyidList .  (6)
	nonEmptyidList : nonEmptyidList . ',' identifier  (7)

	','  shift 22
	':'  reduce 6


state 14
	program_name : programname ';' programbody END . programname  (1)

	ID  shift 1
	.  error

	programname  goto 23
	identifier  goto 4


state 15
	functionName : identifier .  (30)

	.  reduce 30


state 16
	programbody : varible_list function_list . compound  (4)

	BG  shift 24
	.  error

	compound  goto 25


state 17
	function_list : nonEmptyfunctions .  (23)

	.  reduce 23


state 18
	nonEmptyfunctions : function . nonEmptyfunctions  (24)
	nonEmptyfunctions : function .  (25)

	ID  shift 1
	BG  reduce 25

	identifier  goto 15
	nonEmptyfunctions  goto 26
	function  goto 18
	functionName  goto 19


state 19
	function : functionName . '(' arguments ')' body  (26)

	'('  shift 27
	.  error


state 20
	nonEmptyvaribles : nonEmptyvaribles varible .  (20)

	.  reduce 20


state 21
	varible : VAR idList ':' . DE  (36)

	ARRAY  shift 28
	TYPE  shift 29
	INT  shift 30
	FLOAT  shift 31
	SCI  shift 32
	OCTAL  shift 33
	TRUE  shift 34
	FALSE  shift 35
	STRING  shift 36
	.  error

	literal_constant  goto 37
	number  goto 38
	const_boolean  goto 39
	DE  goto 40


state 22
	nonEmptyidList : nonEmptyidList ',' . identifier  (7)

	ID  shift 1
	.  error

	identifier  goto 41


state 23
	program_name : programname ';' programbody END programname .  (1)

	.  reduce 1


state 24
	compound : BG . varible_list statements END  (54)
	varible_list : .  (18)

	VAR  shift 6
	END  reduce 18
	BG  reduce 18
	PRINT  reduce 18
	READ  reduce 18
	ID  reduce 18
	WHILE  reduce 18
	FOR  reduce 18
	RETURN  reduce 18
	IF  reduce 18

	varible_list  goto 42
	nonEmptyvaribles  goto 9
	varible  goto 10


state 25
	programbody : varible_list function_list compound .  (4)

	.  reduce 4


state 26
	nonEmptyfunctions : function nonEmptyfunctions .  (24)

	.  reduce 24


state 27
	function : functionName '(' . arguments ')' body  (26)
	idList : .  (5)
	arguments : .  (31)

	ID  shift 1
	')'  reduce 31
	':'  reduce 5

	identifier  goto 11
	idList  goto 43
	nonEmptyidList  goto 13
	arguments  goto 44
	nonEmptyDeclar  goto 45


state 28
	DE : ARRAY . int_constant TO int_constant OF array_types ';'  (38)

	INT  shift 46
	.  error

	int_constant  goto 47


state 29
	DE : TYPE . ';'  (37)

	';'  shift 48
	.  error


state 30
	number : INT .  (14)

	.  reduce 14


state 31
	number : FLOAT .  (17)

	.  reduce 17


state 32
	number : SCI .  (16)

	.  reduce 16


state 33
	number : OCTAL .  (15)

	.  reduce 15


state 34
	const_boolean : TRUE .  (12)

	.  reduce 12


state 35
	const_boolean : FALSE .  (13)

	.  reduce 13


state 36
	literal_constant : STRING .  (10)

	.  reduce 10


state 37
	DE : literal_constant . ';'  (39)

	';'  shift 49
	.  error


state 38
	literal_constant : number .  (9)

	.  reduce 9


state 39
	literal_constant : const_boolean .  (11)

	.  reduce 11


state 40
	varible : VAR idList ':' DE .  (36)

	.  reduce 36


state 41
	nonEmptyidList : nonEmptyidList ',' identifier .  (7)

	.  reduce 7


state 42
	compound : BG varible_list . statements END  (54)
	statements : .  (44)

	BG  shift 24
	PRINT  shift 50
	READ  shift 51
	ID  shift 1
	WHILE  shift 52
	FOR  shift 53
	RETURN  shift 54
	IF  shift 55
	END  reduce 44

	identifier  goto 56
	compound  goto 57
	statements  goto 58
	nonEmptystatements  goto 59
	statement  goto 60
	simple  goto 61
	conditional  goto 62
	while  goto 63
	for  goto 64
	return  goto 65
	function_invocation  goto 66
	varible_reference  goto 67
	array_reference  goto 68


state 43
	nonEmptyDeclar : idList . ':' TYPE EMP  (33)

	':'  shift 69
	.  error


state 44
	function : functionName '(' arguments . ')' body  (26)

	')'  shift 70
	.  error


state 45
	arguments : nonEmptyDeclar .  (32)

	.  reduce 32


state 46
	int_constant : INT .  (42)

	.  reduce 42


state 47
	DE : ARRAY int_constant . TO int_constant OF array_types ';'  (38)

	TO  shift 71
	.  error


state 48
	DE : TYPE ';' .  (37)

	.  reduce 37


state 49
	DE : literal_constant ';' .  (39)

	.  reduce 39


state 50
	simple : PRINT . VE ';'  (56)

	ID  shift 1
	NOT  shift 72
	INT  shift 73
	FLOAT  shift 31
	SCI  shift 32
	OCTAL  shift 33
	TRUE  shift 34
	FALSE  shift 35
	'-'  shift 74
	'('  shift 75
	.  error

	identifier  goto 76
	number  goto 77
	const_boolean  goto 78
	int_constant  goto 79
	function_invocation  goto 80
	varible_reference  goto 81
	expressions  goto 82
	VE  goto 83
	array_reference  goto 84
	integer_expression  goto 85
	expression  goto 86
	boolean_expr  goto 87


state 51
	simple : READ . varible_reference ';'  (57)

	ID  shift 1
	.  error

	identifier  goto 88
	varible_reference  goto 89
	array_reference  goto 68


state 52
	while : WHILE . boolean_expr DO statements END DO  (99)

	ID  shift 1
	NOT  shift 72
	INT  shift 30
	FLOAT  shift 31
	SCI  shift 32
	OCTAL  shift 33
	TRUE  shift 34
	FALSE  shift 35
	'-'  shift 74
	'('  shift 75
	.  error

	identifier  goto 90
	number  goto 77
	const_boolean  goto 78
	function_invocation  goto 80
	array_reference  goto 91
	expression  goto 92
	boolean_expr  goto 93


state 53
	for : FOR . identifier ASSIGN int_constant TO int_constant DO statements END DO  (100)

	ID  shift 1
	.  error

	identifier  goto 94


state 54
	return : RETURN . expressions ';'  (101)

	ID  shift 1
	NOT  shift 72
	INT  shift 73
	FLOAT  shift 31
	SCI  shift 32
	OCTAL  shift 33
	TRUE  shift 34
	FALSE  shift 35
	'-'  shift 74
	'('  shift 75
	.  error

	identifier  goto 76
	number  goto 77
	const_boolean  goto 78
	int_constant  goto 79
	function_invocation  goto 80
	expressions  goto 95
	array_reference  goto 91
	integer_expression  goto 85
	expression  goto 86
	boolean_expr  goto 87


state 55
	conditional : IF . boolean_expr THEN conditional_body END IF  (96)

	ID  shift 1
	NOT  shift 72
	INT  shift 30
	FLOAT  shift 31
	SCI  shift 32
	OCTAL  shift 33
	TRUE  shift 34
	FALSE  shift 35
	'-'  shift 74
	'('  shift 75
	.  error

	identifier  goto 90
	number  goto 77
	const_boolean  goto 78
	function_invocation  goto 80
	array_reference  goto 91
	expression  goto 92
	boolean_expr  goto 96


state 56
	array_reference : identifier . array_reference_list  (60)
	function_invocation : identifier . '(' expression_list ')'  (92)
	array_reference_list : .  (61)

	'('  shift 97
	'['  shift 98
	ASSIGN  reduce 61

	array_reference_list  goto 99


state 57
	statement : compound .  (47)

	.  reduce 47


state 58
	compound : BG varible_list statements . END  (54)

	END  shift 100
	.  error


state 59
	statements : nonEmptystatements .  (43)
	nonEmptystatements : nonEmptystatements . statement  (45)

	BG  shift 24
	PRINT  shift 50
	READ  shift 51
	ID  shift 1
	WHILE  shift 52
	FOR  shift 53
	RETURN  shift 54
	IF  shift 55
	END  reduce 43
	ELSE  reduce 43

	identifier  goto 56
	compound  goto 57
	statement  goto 101
	simple  goto 61
	conditional  goto 62
	while  goto 63
	for  goto 64
	return  goto 65
	function_invocation  goto 66
	varible_reference  goto 67
	array_reference  goto 68


state 60
	nonEmptystatements : statement .  (46)

	.  reduce 46


state 61
	statement : simple .  (48)

	.  reduce 48


state 62
	statement : conditional .  (49)

	.  reduce 49


state 63
	statement : while .  (50)

	.  reduce 50


state 64
	statement : for .  (51)

	.  reduce 51


state 65
	statement : return .  (52)

	.  reduce 52


state 66
	statement : function_invocation . ';'  (53)

	';'  shift 102
	.  error


state 67
	simple : varible_reference . ASSIGN expressions ';'  (55)

	ASSIGN  shift 103
	.  error


state 68
	varible_reference : array_reference .  (63)

	.  reduce 63


state 69
	nonEmptyDeclar : idList ':' . TYPE EMP  (33)

	TYPE  shift 104
	.  error


state 70
	function : functionName '(' arguments ')' . body  (26)

	';'  shift 105
	':'  shift 106
	.  error

	body  goto 107


state 71
	DE : ARRAY int_constant TO . int_constant OF array_types ';'  (38)

	INT  shift 46
	.  error

	int_constant  goto 108


state 72
	boolean_expr : NOT . expression  (88)

	ID  shift 1
	INT  shift 30
	FLOAT  shift 31
	SCI  shift 32
	OCTAL  shift 33
	'-'  shift 74
	'('  shift 75
	.  error

	identifier  goto 109
	number  goto 77
	function_invocation  goto 110
	array_reference  goto 91
	expression  goto 111


73: reduce/reduce conflict (reduce 14, reduce 42) on ';'
state 73
	number : INT .  (14)
	int_constant : INT .  (42)

	.  reduce 14


state 74
	expression : '-' . expression  (67)

	ID  shift 1
	INT  shift 30
	FLOAT  shift 31
	SCI  shift 32
	OCTAL  shift 33
	'-'  shift 74
	'('  shift 75
	.  error

	identifier  goto 109
	number  goto 77
	function_invocation  goto 110
	array_reference  goto 91
	expression  goto 112


state 75
	expression : '(' . expression ')'  (73)

	ID  shift 1
	INT  shift 30
	FLOAT  shift 31
	SCI  shift 32
	OCTAL  shift 33
	'-'  shift 74
	'('  shift 75
	.  error

	identifier  goto 109
	number  goto 77
	function_invocation  goto 110
	array_reference  goto 91
	expression  goto 113


76: reduce/reduce conflict (reduce 61, reduce 75) on MOD
76: reduce/reduce conflict (reduce 61, reduce 75) on LE
76: reduce/reduce conflict (reduce 61, reduce 75) on GE
76: reduce/reduce conflict (reduce 61, reduce 75) on NE
76: reduce/reduce conflict (reduce 61, reduce 75) on AND
76: reduce/reduce conflict (reduce 61, reduce 75) on OR
76: reduce/reduce conflict (reduce 61, reduce 75) on '>'
76: reduce/reduce conflict (reduce 61, reduce 75) on '<'
76: reduce/reduce conflict (reduce 61, reduce 75) on '+'
76: reduce/reduce conflict (reduce 61, reduce 75) on '-'
76: reduce/reduce conflict (reduce 61, reduce 75) on '*'
76: reduce/reduce conflict (reduce 61, reduce 75) on '/'
76: reduce/reduce conflict (reduce 61, reduce 75) on ';'
76: reduce/reduce conflict (reduce 61, reduce 79) on ';'
76: reduce/reduce conflict (reduce 61, reduce 90) on ';'
76: reduce/reduce conflict (reduce 61, reduce 75) on '='
state 76
	array_reference : identifier . array_reference_list  (60)
	expression : identifier .  (75)
	integer_expression : identifier .  (79)
	boolean_expr : identifier .  (90)
	function_invocation : identifier . '(' expression_list ')'  (92)
	array_reference_list : .  (61)

	'('  shift 97
	'['  shift 98
	MOD  reduce 61
	LE  reduce 61
	GE  reduce 61
	NE  reduce 61
	AND  reduce 61
	OR  reduce 61
	'>'  reduce 61
	'<'  reduce 61
	'+'  reduce 61
	'-'  reduce 61
	'*'  reduce 61
	'/'  reduce 61
	';'  reduce 61
	'='  reduce 61

	array_reference_list  goto 99


state 77
	expression : number .  (74)

	.  reduce 74


state 78
	boolean_expr : const_boolean .  (89)

	.  reduce 89


state 79
	integer_expression : int_constant .  (78)

	.  reduce 78


80: reduce/reduce conflict (reduce 76, reduce 91) on ';'
state 80
	expression : function_invocation .  (76)
	boolean_expr : function_invocation .  (91)

	DO  reduce 91
	MOD  reduce 76
	LE  reduce 76
	GE  reduce 76
	NE  reduce 76
	AND  reduce 76
	OR  reduce 76
	THEN  reduce 91
	'>'  reduce 76
	'<'  reduce 76
	'+'  reduce 76
	'-'  reduce 76
	'*'  reduce 76
	'/'  reduce 76
	';'  reduce 76
	'='  reduce 76


state 81
	VE : varible_reference . ';'  (58)

	';'  shift 114
	.  error


state 82
	VE : expressions . ';'  (59)

	';'  shift 115
	.  error


state 83
	simple : PRINT VE . ';'  (56)

	';'  shift 116
	.  error


84: reduce/reduce conflict (reduce 63, reduce 77) on ';'
state 84
	varible_reference : array_reference .  (63)
	expression : array_reference .  (77)

	MOD  reduce 77
	LE  reduce 77
	GE  reduce 77
	NE  reduce 77
	AND  reduce 77
	OR  reduce 77
	'>'  reduce 77
	'<'  reduce 77
	'+'  reduce 77
	'-'  reduce 77
	'*'  reduce 77
	'/'  reduce 77
	';'  reduce 63
	'='  reduce 77


state 85
	expressions : integer_expression .  (65)

	.  reduce 65


state 86
	expressions : expression .  (64)
	expression : expression . '+' expression  (68)
	expression : expression . '-' expression  (69)
	expression : expression . '*' expression  (70)
	expression : expression . '/' expression  (71)
	expression : expression . MOD expression  (72)
	boolean_expr : expression . '>' expression  (80)
	boolean_expr : expression . '<' expression  (81)
	boolean_expr : expression . LE expression  (82)
	boolean_expr : expression . GE expression  (83)
	boolean_expr : expression . '=' expression  (84)
	boolean_expr : expression . NE expression  (85)
	boolean_expr : expression . AND expression  (86)
	boolean_expr : expression . OR expression  (87)

	MOD  shift 117
	LE  shift 118
	GE  shift 119
	NE  shift 120
	AND  shift 121
	OR  shift 122
	'>'  shift 123
	'<'  shift 124
	'+'  shift 125
	'-'  shift 126
	'*'  shift 127
	'/'  shift 128
	'='  shift 129
	';'  reduce 64


state 87
	expressions : boolean_expr .  (66)

	.  reduce 66


state 88
	array_reference : identifier . array_reference_list  (60)
	array_reference_list : .  (61)

	'['  shift 98
	';'  reduce 61

	array_reference_list  goto 99


state 89
	simple : READ varible_reference . ';'  (57)

	';'  shift 130
	.  error


90: reduce/reduce conflict (reduce 61, reduce 75) on MOD
90: reduce/reduce conflict (reduce 61, reduce 75) on LE
90: reduce/reduce conflict (reduce 61, reduce 75) on GE
90: reduce/reduce conflict (reduce 61, reduce 75) on NE
90: reduce/reduce conflict (reduce 61, reduce 75) on AND
90: reduce/reduce conflict (reduce 61, reduce 75) on OR
90: reduce/reduce conflict (reduce 61, reduce 75) on '>'
90: reduce/reduce conflict (reduce 61, reduce 75) on '<'
90: reduce/reduce conflict (reduce 61, reduce 75) on '+'
90: reduce/reduce conflict (reduce 61, reduce 75) on '-'
90: reduce/reduce conflict (reduce 61, reduce 75) on '*'
90: reduce/reduce conflict (reduce 61, reduce 75) on '/'
90: reduce/reduce conflict (reduce 61, reduce 75) on '='
state 90
	array_reference : identifier . array_reference_list  (60)
	expression : identifier .  (75)
	boolean_expr : identifier .  (90)
	function_invocation : identifier . '(' expression_list ')'  (92)
	array_reference_list : .  (61)

	'('  shift 97
	'['  shift 98
	DO  reduce 90
	MOD  reduce 61
	LE  reduce 61
	GE  reduce 61
	NE  reduce 61
	AND  reduce 61
	OR  reduce 61
	THEN  reduce 90
	'>'  reduce 61
	'<'  reduce 61
	'+'  reduce 61
	'-'  reduce 61
	'*'  reduce 61
	'/'  reduce 61
	'='  reduce 61

	array_reference_list  goto 99


state 91
	expression : array_reference .  (77)

	.  reduce 77


state 92
	expression : expression . '+' expression  (68)
	expression : expression . '-' expression  (69)
	expression : expression . '*' expression  (70)
	expression : expression . '/' expression  (71)
	expression : expression . MOD expression  (72)
	boolean_expr : expression . '>' expression  (80)
	boolean_expr : expression . '<' expression  (81)
	boolean_expr : expression . LE expression  (82)
	boolean_expr : expression . GE expression  (83)
	boolean_expr : expression . '=' expression  (84)
	boolean_expr : expression . NE expression  (85)
	boolean_expr : expression . AND expression  (86)
	boolean_expr : expression . OR expression  (87)

	MOD  shift 117
	LE  shift 118
	GE  shift 119
	NE  shift 120
	AND  shift 121
	OR  shift 122
	'>'  shift 123
	'<'  shift 124
	'+'  shift 125
	'-'  shift 126
	'*'  shift 127
	'/'  shift 128
	'='  shift 129
	.  error


state 93
	while : WHILE boolean_expr . DO statements END DO  (99)

	DO  shift 131
	.  error


state 94
	for : FOR identifier . ASSIGN int_constant TO int_constant DO statements END DO  (100)

	ASSIGN  shift 132
	.  error


state 95
	return : RETURN expressions . ';'  (101)

	';'  shift 133
	.  error


state 96
	conditional : IF boolean_expr . THEN conditional_body END IF  (96)

	THEN  shift 134
	.  error


state 97
	function_invocation : identifier '(' . expression_list ')'  (92)
	expression_list : .  (93)

	ID  shift 1
	INT  shift 30
	FLOAT  shift 31
	SCI  shift 32
	OCTAL  shift 33
	'-'  shift 74
	'('  shift 75
	','  reduce 93
	')'  reduce 93

	identifier  goto 109
	number  goto 77
	function_invocation  goto 110
	array_reference  goto 91
	expression  goto 135
	expression_list  goto 136


state 98
	array_reference_list : '[' . integer_expression ']' array_reference_list  (62)

	ID  shift 1
	INT  shift 46
	.  error

	identifier  goto 137
	int_constant  goto 79
	integer_expression  goto 138


state 99
	array_reference : identifier array_reference_list .  (60)

	.  reduce 60


state 100
	compound : BG varible_list statements END .  (54)

	.  reduce 54


state 101
	nonEmptystatements : nonEmptystatements statement .  (45)

	.  reduce 45


state 102
	statement : function_invocation ';' .  (53)

	.  reduce 53


state 103
	simple : varible_reference ASSIGN . expressions ';'  (55)

	ID  shift 1
	NOT  shift 72
	INT  shift 73
	FLOAT  shift 31
	SCI  shift 32
	OCTAL  shift 33
	TRUE  shift 34
	FALSE  shift 35
	'-'  shift 74
	'('  shift 75
	.  error

	identifier  goto 76
	number  goto 77
	const_boolean  goto 78
	int_constant  goto 79
	function_invocation  goto 80
	expressions  goto 139
	array_reference  goto 91
	integer_expression  goto 85
	expression  goto 86
	boolean_expr  goto 87


state 104
	nonEmptyDeclar : idList ':' TYPE . EMP  (33)
	idList : .  (5)
	EMP : .  (35)

	ID  shift 1
	')'  reduce 35
	':'  reduce 5

	identifier  goto 11
	idList  goto 43
	nonEmptyidList  goto 13
	nonEmptyDeclar  goto 140
	EMP  goto 141


state 105
	body : ';' . functionBody END ID  (28)

	BG  shift 24
	.  error

	compound  goto 142
	functionBody  goto 143


state 106
	body : ':' . TYPE ';' functionBody END ID  (27)

	TYPE  shift 144
	.  error


state 107
	function : functionName '(' arguments ')' body .  (26)

	.  reduce 26


state 108
	DE : ARRAY int_constant TO int_constant . OF array_types ';'  (38)

	OF  shift 145
	.  error


109: reduce/reduce conflict (reduce 61, reduce 75) on DO
109: reduce/reduce conflict (reduce 61, reduce 75) on MOD
109: reduce/reduce conflict (reduce 61, reduce 75) on LE
109: reduce/reduce conflict (reduce 61, reduce 75) on GE
109: reduce/reduce conflict (reduce 61, reduce 75) on NE
109: reduce/reduce conflict (reduce 61, reduce 75) on AND
109: reduce/reduce conflict (reduce 61, reduce 75) on OR
109: reduce/reduce conflict (reduce 61, reduce 75) on THEN
109: reduce/reduce conflict (reduce 61, reduce 75) on '>'
109: reduce/reduce conflict (reduce 61, reduce 75) on '<'
109: reduce/reduce conflict (reduce 61, reduce 75) on '+'
109: reduce/reduce conflict (reduce 61, reduce 75) on '-'
109: reduce/reduce conflict (reduce 61, reduce 75) on '*'
109: reduce/reduce conflict (reduce 61, reduce 75) on '/'
109: reduce/reduce conflict (reduce 61, reduce 75) on ';'
109: reduce/reduce conflict (reduce 61, reduce 75) on ','
109: reduce/reduce conflict (reduce 61, reduce 75) on ')'
109: reduce/reduce conflict (reduce 61, reduce 75) on '='
state 109
	array_reference : identifier . array_reference_list  (60)
	expression : identifier .  (75)
	function_invocation : identifier . '(' expression_list ')'  (92)
	array_reference_list : .  (61)

	'('  shift 97
	'['  shift 98
	DO  reduce 61
	MOD  reduce 61
	LE  reduce 61
	GE  reduce 61
	NE  reduce 61
	AND  reduce 61
	OR  reduce 61
	THEN  reduce 61
	'>'  reduce 61
	'<'  reduce 61
	'+'  reduce 61
	'-'  reduce 61
	'*'  reduce 61
	'/'  reduce 61
	';'  reduce 61
	','  reduce 61
	')'  reduce 61
	'='  reduce 61

	array_reference_list  goto 99


state 110
	expression : function_invocation .  (76)

	.  reduce 76


state 111
	expression : expression . '+' expression  (68)
	expression : expression . '-' expression  (69)
	expression : expression . '*' expression  (70)
	expression : expression . '/' expression  (71)
	expression : expression . MOD expression  (72)
	boolean_expr : NOT expression .  (88)

	MOD  shift 117
	'+'  shift 125
	'-'  shift 126
	'*'  shift 127
	'/'  shift 128
	DO  reduce 88
	THEN  reduce 88
	';'  reduce 88


112: shift/reduce conflict (shift 117, reduce 67) on MOD
state 112
	expression : '-' expression .  (67)
	expression : expression . '+' expression  (68)
	expression : expression . '-' expression  (69)
	expression : expression . '*' expression  (70)
	expression : expression . '/' expression  (71)
	expression : expression . MOD expression  (72)

	MOD  shift 117
	DO  reduce 67
	LE  reduce 67
	GE  reduce 67
	NE  reduce 67
	AND  reduce 67
	OR  reduce 67
	THEN  reduce 67
	'>'  reduce 67
	'<'  reduce 67
	'+'  reduce 67
	'-'  reduce 67
	'*'  reduce 67
	'/'  reduce 67
	';'  reduce 67
	','  reduce 67
	')'  reduce 67
	'='  reduce 67


state 113
	expression : expression . '+' expression  (68)
	expression : expression . '-' expression  (69)
	expression : expression . '*' expression  (70)
	expression : expression . '/' expression  (71)
	expression : expression . MOD expression  (72)
	expression : '(' expression . ')'  (73)

	MOD  shift 117
	'+'  shift 125
	'-'  shift 126
	'*'  shift 127
	'/'  shift 128
	')'  shift 146
	.  error


state 114
	VE : varible_reference ';' .  (58)

	.  reduce 58


state 115
	VE : expressions ';' .  (59)

	.  reduce 59

